added html and css for mobile

--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <title>Advice Generator</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png" />
     <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
   </head>
   <body>
-    <h1></h1>
+    <div class="advice-container">
+      <p class="advice-number">ADVICE #117</p>
+      <h1 class="advice-quote">
+        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+        voluptate"
+      </h1>
+      <img
+        src="images/pattern-divider-mobile.svg"
+        alt="2 horizontal lines divided by a quote mark"
+        class="img-divider"
+      />
+      <div class="dice-container">
+        <img src="images/icon-dice.svg" alt="dice 6" class="img-dice" />
+      </div>
+    </div>
   </body>
 </html>
