--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
   </head>
   <body>
     <div class="advice-container">
-      <p class="advice-number">ADVICE #117</p>
-      <h1 class="advice-quote">
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-        voluptate"
-      </h1>
+      <p class="advice-number"></p>
+      <h1 class="advice-quote"></h1>
       <img
         src="images/pattern-divider-mobile.svg"
         alt="2 horizontal lines divided by a quote mark"
